Remove search for devops demo

--- a/hs_discover/public/index.html
+++ b/hs_discover/public/index.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
 {% load pages_tags mezzanine_tags keyword_tags comment_tags hydroshare_tags %}
-{% block meta_title %}Discover{% endblock %}
+{% block meta_title %}Sample{% endblock %}
 {% block main %}
     <input type="hidden" id="static-url" value="{{ STATIC_URL }}">
     <div class="container" id="discover-main">
         <div class="row">
             <div class="col-xs-12">
-                <h2 class="page-title">Discover</h2>
+                <h2 class="page-title">Sample</h2>
                 <div id="app"></div>
             </div>
         </div>
