Wire up webpack to Django

--- a/hs_discover/public/index.html
+++ b/hs_discover/public/index.html
@@ -6,9 +6,12 @@
     <div class="container" id="discover-main">
         <div class="row">
             <div class="col-xs-12">
-                <h2 class="page-title">Sample</h2>
+                <h2 class="page-title">Success</h2>
+                <div>{{ sample_item }}</div>
                 <div id="app"></div>
             </div>
         </div>
     </div>
+    <script src=/static/js/chunk-vendors.js></script>
+    <script src=/static/js/app.js></script>
 {% endblock %}
