--- a/hs_discover/public/index.html
+++ b/hs_discover/public/index.html
@@ -6,8 +6,7 @@
     <div class="container" id="discover-main">
         <div class="row">
             <div class="col-xs-12">
-                <h2 class="page-title">Success</h2>
-                <div>{{ sample_item }}</div>
+                <h2 class="page-title">Discover</h2>
                 <div id="app"></div>
             </div>
         </div>
