--- a/hs_discover/public/index.html
+++ b/hs_discover/public/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load pages_tags mezzanine_tags keyword_tags comment_tags hydroshare_tags %}
-{% block meta_title %}Sample{% endblock %}
+{% block meta_title %}Discover{% endblock %}
 {% block main %}
     <input type="hidden" id="static-url" value="{{ STATIC_URL }}">
     <div class="container" id="discover-main">
