--- a/hs_discover/public/index.html
+++ b/hs_discover/public/index.html
@@ -12,6 +12,16 @@
                 <div id="app"></div>
             </div>
         </div>
+        <br>
+        <div class="alert alert-info">
+            <strong>
+                <i class="glyphicon glyphicon-question-sign"></i> Not finding what you are looking for?
+            </strong>
+            <p class="space-top">Private resources owned by you or shared with you by colleagues are
+                searchable from
+                <strong><a href="/my-resources">My Resources</a></strong></p>
+        </div>
+        {% include "includes/legend.html" %}
     </div>
     <script src=/static/js/chunk-vendors.js></script>
     <script src=/static/js/app.js></script>
