--- a/hs_discover/public/index.html
+++ b/hs_discover/public/index.html
@@ -23,6 +23,35 @@
         </div>
         {% include "includes/legend.html" %}
     </div>
+    <div id="map-view" class="tab-pane fade">
+        <div class="row">
+            <div class="col-xs-12">
+                <span id="discover-map-loading-spinner" class="discover-loading-icon icon-blue">
+                      <i class="fa fa-spinner fa-spin fa-2x fa-fw"></i>
+                </span>
+                <br/>
+                <form id="covereage-search-fields" method="get" action="." class="hidden">
+                    {% for field in form %}
+                    {% if field.auto_id == "id_NElat" or field.auto_id == "id_NElng" or field.auto_id == "id_SWlat" or
+                    field.auto_id == "id_SWlng" %}
+                    {{ field }}
+                    {% endif %}
+                    {% endfor %}
+                </form>
+
+                <div id="geocoder-panel"></div>
+
+                <div id="discover-map"></div>
+
+                <div id="discover-map-legend"></div>
+
+                <div id="resetZoom"></div>
+                <br/>
+                <table class="table-hover table-striped" id="map-items" style="width:100%; max-height:200px">
+                </table>
+            </div>
+        </div>
+    </div>
     <script src=/static/js/chunk-vendors.js></script>
     <script src=/static/js/app.js></script>
 {% endblock %}
