--- a/hs_discover/public/index.html
+++ b/hs_discover/public/index.html
@@ -58,7 +58,7 @@
 
                 <div id="discover-map-legend"></div>
 
-                <div id="resetZoom"></div>
+                <div id="reset-zoom"></div>
                 <br/>
                 <table class="table-hover table-striped" id="map-items" style="width:100%; max-height:200px">
                 </table>
