--- a/hs_discover/public/index.html
+++ b/hs_discover/public/index.html
@@ -39,6 +39,7 @@
     </div>
     <script src=/static/js/chunk-vendors.js></script>
     <script src=/static/js/app.js></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src=/static/js/map.js></script>
     <script async defer
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBv1tggGSW3-12h6vkbo8BL711KaUnG1w0&callback=initMap&libraries=&v=weekly&libraries=places"
