Add Subject filtering

--- a/hs_discover/public/index.html
+++ b/hs_discover/public/index.html
@@ -25,9 +25,9 @@
     <link rel="stylesheet" type="text/css" href="/static/css/hydroshare_extends.css"/>
     <link rel="stylesheet" type="text/css" href="/static/css/jquery.dataTables.min.css">
     <link rel="stylesheet" type="text/css" href="/static/autocomplete_light/style.css"/>
-<!--    <script type="text/javascript">-->
-<!--        var csrf_token = "gcpMpuUKvjbgQ6YNPy77BX74KcfWnnTABvTGEh2mpvvAOVZKvZvKqMjy0UMyQJDX";-->
-<!--    </script>-->
+    <!--    <script type="text/javascript">-->
+    <!--        var csrf_token = "gcpMpuUKvjbgQ6YNPy77BX74KcfWnnTABvTGEh2mpvvAOVZKvZvKqMjy0UMyQJDX";-->
+    <!--    </script>-->
 
     <link rel="stylesheet" type="text/css" href="/static/css/inplaceedit_structure.css"/>
     <link rel="stylesheet" type="text/css" href="/static/css/inplaceedit_style.css"/>
@@ -109,16 +109,16 @@
         </div>
     </div>
 </div>
-<div id="map">map</div>
+<div id="map"></div>
 <style type="text/css">
-  /* Always set the map height explicitly to define the size of the div
-   * element that contains the map. */
-  #map {
-    height: 100%;
-  }
+    /* Always set the map height explicitly to define the size of the div
+     * element that contains the map. */
+    #map {
+        height: 100%;
+    }
 </style>
 <div id="map-view">
-    <input id="map-search" class="controls" type="text" placeholder="Search Box">
+    <input id="map-search" class="controls" type="text" placeholder="Jump to">
     <div id="discover-map-legend"></div>
     <div id="reset-zoom"></div>
 </div>
@@ -128,7 +128,7 @@
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src=/static/js/map.js></script>
 <script async defer
-  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBv1tggGSW3-12h6vkbo8BL711KaUnG1w0&callback=initMap&libraries=&v=weekly&libraries=places"
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBv1tggGSW3-12h6vkbo8BL711KaUnG1w0&callback=initMap&libraries=&v=weekly&libraries=places"
 ></script>
 <!-- Foooter
     ================== -->
