Floating facets left

--- a/hs_discover/public/index.html
+++ b/hs_discover/public/index.html
@@ -23,14 +23,14 @@
     <link href="/static/css/identifiers.css" rel="stylesheet"/>
     <link href="/static/css/academicons.min.css" rel="stylesheet"/>
     <link rel="stylesheet" type="text/css" href="/static/css/hydroshare_extends.css"/>
-    <link rel="stylesheet" type="text/css" href="/static/css/jquery.dataTables.min.css">
-    <link rel="stylesheet" type="text/css" href="/static/autocomplete_light/style.css"/>
+<!--    <link rel="stylesheet" type="text/css" href="/static/css/jquery.dataTables.min.css">-->
+<!--    <link rel="stylesheet" type="text/css" href="/static/autocomplete_light/style.css"/>-->
     <!--    <script type="text/javascript">-->
     <!--        var csrf_token = "gcpMpuUKvjbgQ6YNPy77BX74KcfWnnTABvTGEh2mpvvAOVZKvZvKqMjy0UMyQJDX";-->
     <!--    </script>-->
-
-    <link rel="stylesheet" type="text/css" href="/static/css/inplaceedit_structure.css"/>
-    <link rel="stylesheet" type="text/css" href="/static/css/inplaceedit_style.css"/>
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+<!--    <link rel="stylesheet" type="text/css" href="/static/css/inplaceedit_structure.css"/>-->
+<!--    <link rel="stylesheet" type="text/css" href="/static/css/inplaceedit_style.css"/>-->
     <style>
         .showcase {
             zoom: 0.6;
@@ -109,27 +109,27 @@
         </div>
     </div>
 </div>
-<div id="map"></div>
-<style type="text/css">
-    /* Always set the map height explicitly to define the size of the div
-     * element that contains the map. */
-    #map {
-        height: 100%;
-    }
-</style>
-<div id="map-view">
-    <input id="map-search" class="controls" type="text" placeholder="Jump to">
-    <div id="discover-map-legend"></div>
-    <div id="reset-zoom"></div>
-</div>
+<!--<div id="map"></div>-->
+<!--<style type="text/css">-->
+<!--    /* Always set the map height explicitly to define the size of the div-->
+<!--     * element that contains the map. */-->
+<!--    #map {-->
+<!--        height: 100%;-->
+<!--    }-->
+<!--</style>-->
+<!--<div id="map-view">-->
+<!--    <input id="map-search" class="controls" type="text" placeholder="Jump to">-->
+<!--    <div id="discover-map-legend"></div>-->
+<!--    <div id="reset-zoom"></div>-->
+<!--</div>-->
 <div id="app"></div>
 <script src=/static/js/chunk-vendors.js></script>
 <script src=/static/js/app.js></script>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-<script src=/static/js/map.js></script>
-<script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBv1tggGSW3-12h6vkbo8BL711KaUnG1w0&callback=initMap&libraries=&v=weekly&libraries=places"
-></script>
+<!--<script src=/static/js/map.js></script>-->
+<!--<script async defer-->
+<!--        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBv1tggGSW3-12h6vkbo8BL711KaUnG1w0&callback=initMap&libraries=&v=weekly&libraries=places"-->
+<!--&gt;</script>-->
 <!-- Foooter
     ================== -->
 <footer>
