Add container styling

--- a/hs_discover/public/index.html
+++ b/hs_discover/public/index.html
@@ -32,10 +32,22 @@
 <!--    <link rel="stylesheet" type="text/css" href="/static/css/inplaceedit_structure.css"/>-->
 <!--    <link rel="stylesheet" type="text/css" href="/static/css/inplaceedit_style.css"/>-->
     <style>
+        #main-container {
+            width: 1000px;
+        }
         .showcase {
             zoom: 0.6;
         }
-    </style>
+      #resources-main {
+        width: 600px;
+      }
+      #filter-items {
+        float: left;
+      }
+      #resource-rows {
+        float: right;
+      }
+</style>
 
     <script type="text/javascript">
         window.heap = window.heap || [], heap.load = function (e, t) {
