Customize nav in new template

--- a/hs_discover/public/index.html
+++ b/hs_discover/public/index.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "vuebase.html" %}
 {% load pages_tags mezzanine_tags keyword_tags comment_tags hydroshare_tags %}
 {% block meta_title %}Discover{% endblock %}
 {% block main %}
