Update styling for date pick

--- a/hs_discover/public/index.html
+++ b/hs_discover/public/index.html
@@ -16,6 +16,11 @@
     .vdpCellContent {
         font-size: 1em;
     }
+    input {
+        /*TODO MAKE MORE SPECIFIC*/
+        /*padding-right: 30px;*/
+        font-size: 14px;
+    }
     #map-view {
         display: none;
     }
