--- a/hs_discover/public/index.html
+++ b/hs_discover/public/index.html
@@ -33,7 +33,7 @@
     </div>
     <br>
     <div id="map-view">
-        <input id="map-search" class="controls" type="text" placeholder="Search Box">
+        <input id="map-search" class="controls" type="text" placeholder="Jump To">
         <div id="map"></div>
         <div id="discover-map-legend"></div>
         <div id="reset-zoom"></div>
@@ -205,6 +205,7 @@
 <script src=/static/js/app.js></script>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src=/static/js/map.js></script>
+<script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js"></script>
 <script async defer
   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBv1tggGSW3-12h6vkbo8BL711KaUnG1w0&callback=initMap&libraries=&v=weekly&libraries=places"
 ></script>
