--- a/hs_discover/public/index.html
+++ b/hs_discover/public/index.html
@@ -26,18 +26,21 @@
     }
 </style>
 <div class="container" id="discover-main">
-    <div class="row">
-        <div class="col-xs-12">
-            <div id="app"></div>
-        </div>
-    </div>
-    <br>
+                <h2 class="page-title">Discover
+                <small class="text-muted"><i>Public resources shared with the community</i></small>
+            </h2>
     <div id="map-view">
         <input id="map-search" class="controls" type="text" placeholder="Jump To">
         <div id="map"></div>
         <div id="discover-map-legend"></div>
         <div id="reset-zoom"></div>
     </div><br>
+    <div class="row">
+        <div class="col-xs-12">
+            <div id="app"></div>
+        </div>
+    </div>
+    <br>
     <div class="row">
         <div class="col-xs-12">
             <div class="alert alert-info">
