--- a/hs_discover/public/index.html
+++ b/hs_discover/public/index.html
@@ -25,6 +25,7 @@
         display: none;
     }
 </style>
+<input type="hidden" id="qstring" value="{{ request.GET.q }}">
 <div class="container" id="discover-main">
                 <h2 class="page-title">Discover
                 <small class="text-muted"><i>Public resources shared with the community</i></small>
