Update modal title alignment

--- a/hs_discover/public/index.html
+++ b/hs_discover/public/index.html
@@ -8,6 +8,7 @@
     /* Always set the map height explicitly to define the size of the div
      * element that contains the map. */
     #map {
+        /*reason*/
         height: 50%;
     }
     .vdpHeadCellContent {
